remove a lot of old code in RandomizerGUI
this code needs to go at some point, and was obstructing testing